# acktrail

./: .dockerignore  .gitignore  Dockerfile  Procfile  README.md  com.plan.md  digital-signage-platform.plan.md  nixpacks.toml  pricing.plan.md  productbrief.md  railway.json  signup.plan.md  vercel.json
backend/: README.md  SYNC_STAFF_COUNTS.md  alembic.ini  archive_old_prices.py  archive_old_products.py  archive_sso_addon.py  backup_database.py  cancel_stripe_subs.py  check_policy.py  check_stripe_detailed.py  check_stripe_subs.py  clean_test_data.py  clean_test_data_auto.py  configure_customer_portal.py  create_missing_prices.py  list_b2_files.py  migrate_to_flat_rate_pricing.py  pyproject.toml  requirements.txt  start.sh  sync_staff_counts.py  sync_stripe.py  test_api_endpoint.py  test_b2.py  test_pdf_proxy.py  update_price_nicknames.py  update_product_descriptions.py  update_stripe_descriptions.py  update_stripe_products.py  view_data.py  whitelist_workspace.py
backend/alembic/: env.py
backend/alembic/versions/: 01801c2542cd_add_user_profile_fields.py  20251028120000_add_policy_questions.py  2177a4feb97b_add_notifications_table.py  2497b946325e_allow_same_email_across_workspaces.py  2a9d1d2eeb8c_add_onboarding_completed_to_workspaces.py  44bfba6f6ffa_add_trial_ends_at_to_workspaces.py  65ef63f731fa_add_sso_enabled_to_workspaces.py  70a16060df82_add_password_and_magic_link_support.py  7bc5ffc54367_add_staff_count_column_to_workspaces.py  9f642e31908f_add_workspace_and_team_multitenancy_.py  (+8 more)
backend/app/: __init__.py  main.py
backend/db/: schema.sql
(+109 files in other folders)
