[tool.poetry]
name = "policy-ack-tracker"
version = "0.1.0"
description = "Policy Acknowledgment Tracking System"
authors = ["Your Name"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
sqlalchemy = "^2.0.25"
psycopg2-binary = "^2.9.9"
alembic = "^1.13.1"
pydantic = {extras = ["email"], version = "^2.5.3"}
pydantic-settings = "^2.1.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"
boto3 = "^1.34.0"
httpx = "^0.26.0"
requests = "^2.31.0"
pyjwt = "^2.8.0"
jinja2 = "^3.1.3"
python-dotenv = "^1.0.0"
reportlab = "^4.0.9"
markdown = "^3.5.2"
pytz = "^2024.1"
b2sdk = "^2.10.0"
stripe = "^8.0.0"
msal = "^1.34.0"
cryptography = "^46.0.3"
slack-sdk = "^3.37.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"